# web/openapi/openapi.json
@@ -7056,9 +7056,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "additionalProperties": true,
-                  "title": "Response Get Task Api V1 Tasks  Task Id  Get"
+                  "$ref": "#/components/schemas/TaskListItem"
                 }
               }
             }
